--- a/style/partials/_programs.scss
+++ b/style/partials/_programs.scss
@@ -15,44 +15,92 @@
 	height: 21vw;
 	margin: 1vw;
 }
+.number-items-boxes--mobile {
+	margin: 0 auto;
+	max-width: 891px;
+	padding-top: 50px;
+	@media (min-width: 980.5px) {
+		display: none;
+	}
+	.number-items-box {
+		@media (max-width: 489px) {
+			text-align: left;
+			padding-left: 14%;
+			&:first-child {
+				padding-left: 11%;
+			}
+		}
+		@media (min-width: 489px) {
+			display: inline-block;
+		}
+		height: 110px;
+		padding-right: 30px;
+		&:last-child {padding-right:0;}
+		div {
+			display: inline-block;
+			white-space: normal;
+		}
+		.copy--20--futura {
+			margin-left: 14px;
+		}
+	}
+}
 .number-items-boxes {
 	margin: 0 auto;
 	max-width: 891px;
 	text-align: left;
-}
-.number-items-box {
-	display: inline-block;
-	height: 110px;
-	margin-right: 100px;
-	text-align: left;
-	width: 210px;
-	white-space: nowrap;
-	&:last-child {
-		margin-right: 0;
+	@media (max-width: 980px) {
+		display: none;
 	}
-	div {
+	.number-items-box {
 		display: inline-block;
-		white-space: normal;
-	}
-	.copy--20--futura {
-		margin-left: 14px;
+		height: 110px;
+		margin-right: 100px;
+		text-align: left;
+		width: 210px;
+		white-space: nowrap;
+		&:last-child {
+			margin-right: 0;
+		}
+		div {
+			display: inline-block;
+			white-space: normal;
+		}
+		.copy--20--futura {
+			margin-left: 14px;
+		}
 	}
 }
 .programs__program {
 	.programs__program__body {
 		margin: 0 auto;
 		max-width: 891px;
-		text-align: left;
+		@media (min-width: 980.5px) {
+			text-align: left;
+		}
 		img {
 			display: inline-block;
 			max-width: 412px;
 			vertical-align: top;
+			@media (max-width: 980px) {
+				display: block;
+				margin: 0 auto;
+				padding: 0 11%;
+				width: calc(100% - 22%);
+			}
 		}
 		.copy--16--bookmania {
 			display: inline-block;
-			margin-left: 60px;
 			margin-top: 0;
 			max-width: 412px;
+			@media (max-width: 980px) {
+				margin-top: 16px;
+				padding: 0 11%;
+				width: calc(100% - 22%);
+			}
+			@media (min-width: 980.5px) {
+				margin-left: 60px;
+			}
 		}
 	}
 	.programs__program__statistic {
