--- a/style/style.css
+++ b/style/style.css
@@ -66,8 +66,10 @@ h6 {
 header {
   margin-bottom: -4px;
   padding: 55px 0 20px; }
+  header a {
+    transform: translateX(10px); }
   header p {
-    transform: translateX(-10px) translateY(-35px); }
+    transform: translateY(-35px); }
 
 /*** IDS ***/
 #_826link-1 {
@@ -139,6 +141,10 @@ nav {
   padding: 15px 20px; }
   .link-row__box:last-child {
     border-right: none; }
+  @media (max-width: 368px) {
+    .link-row__box {
+      border-right: none;
+      display: block; } }
 
 .nav__links {
   display: inline-block; }
@@ -209,6 +215,56 @@ nav {
   height: 16vw;
   width: 15vw; }
 
+@media all and (max-width: 660px) {
+  nav {
+    margin: 0 8vw 0 7vw;
+    width: calc(100% - 15vw); }
+
+  #nav__link__kendra {
+    margin-left: 4vw;
+    transform: translateX(-7vw) translateY(9vw);
+    height: 34.56vw;
+    width: 26.88vw; }
+
+  #nav__link__financials {
+    margin-left: 0vw;
+    transform: translateX(0vw);
+    height: 20.8vw;
+    width: 30.4vw; }
+
+  #nav__link__our-team {
+    margin-left: 4vw;
+    margin-top: 4vw;
+    transform: translateX(-4vw) translateY(0.5vw);
+    height: 24.8vw;
+    width: 18.4vw; }
+
+  #nav__link__our-students {
+    margin-top: 4vw;
+    transform: translateY(1vw);
+    height: 30.4vw;
+    width: 22.4vw; }
+
+  #nav__link__programs {
+    margin-left: 1vw;
+    margin-top: 4vw;
+    transform: translateY(-3vw);
+    height: 22.4vw;
+    width: 25.6vw; }
+
+  #nav__link__partners {
+    margin-left: 3vw;
+    margin-top: 8vw;
+    transform: translateY(-2vw);
+    height: 26.56vw;
+    width: 24vw; }
+
+  #nav__link__our-supporters {
+    margin-left: 1vw;
+    margin-top: 8vw;
+    transform: translateX(2vw) translateY(-2vw);
+    height: 25.6vw;
+    width: 24vw; } }
 #home {
   background-color: #f7f6f4; }
 
@@ -283,16 +339,36 @@ nav {
 
 #hp-grid__wrap {
   margin-bottom: 18vw; }
+  @media all and (max-width: 660px) {
+    #hp-grid__wrap {
+      columns: 2;
+      column-gap: 0px;
+      padding: 40px;
+      margin-bottom: 0; }
+      #hp-grid__wrap img {
+        margin: 0;
+        transform: translateX(0) translateY(0);
+        width: 100%; } }
+  #hp-grid__wrap img {
+    padding: 10px;
+    box-sizing: border-box; }
 
 #mission {
-  -webkit-transform: translateY(-32vw);
-  transform: translateY(-32vw); }
+  -webkit-transform: translateY(-52vw);
+  transform: translateY(-52vw); }
   #mission img {
     display: block;
     margin: 0 auto;
     width: 61vw;
     -webkit-transform: translateX(2vw);
     transform: translateX(2vw); }
+  @media all and (max-width: 660px) {
+    #mission {
+      margin-bottom: 18vw;
+      transform: translateX(0) translateY(0); }
+      #mission img {
+        transform: translateX(-1vw);
+        width: 115%; } }
 
 #stat__students-served {
   left: -4vw;
@@ -362,6 +438,52 @@ nav {
   #stat__field-trips .copy--20--futura {
     margin-left: 4px; }
 
+@media all and (max-width: 660px) {
+  #stat__students-served,
+  #stat__zipcodes,
+  #stat__active-volunteers,
+  #stat__programming-hours,
+  #stat__teachers-served,
+  #stat__programming-hours,
+  #stat__teachers-served,
+  #stat__writing-sessions,
+  #stat__schools,
+  #stat__publications,
+  #stat__field-trips {
+    height: auto;
+    margin-bottom: 8vw; }
+
+  #stat__students-served {
+    left: -10vw; }
+    #stat__students-served > div {
+      left: 56.3vw;
+      top: -170px; }
+
+  #stat__zipcodes {
+    left: -8vw; }
+    #stat__zipcodes > div {
+      left: 56.3vw;
+      top: -170px; }
+
+  #stat__programming-hours {
+    left: -10vw; }
+
+  #stat__teachers-served {
+    left: -7vw; }
+
+  #stat__writing-sessions {
+    left: -5vw; }
+    #stat__writing-sessions .copy--20--futura {
+      width: 200px; }
+
+  #stat__schools {
+    left: -5vw; }
+
+  #stat__publications {
+    left: -2vw; }
+
+  #stat__field-trips {
+    left: 0; } }
 #letter {
   background-color: #f28460; }
   #letter h5 {
@@ -402,14 +524,30 @@ nav {
 #team {
   background-color: #91af7f; }
   #team .list-section {
-    margin: 19vw; }
+    margin: 11%; }
+    @media (min-width: 830px) {
+      #team .list-section {
+        margin: 19vw; } }
     #team .list-section h2 {
       font-weight: normal;
       margin-top: 210px; }
+      @media (max-width: 830px) {
+        #team .list-section h2 {
+          width: 380px; } }
+      @media (max-width: 320px) {
+        #team .list-section h2 {
+          width: 268px;
+          font-size: 60px;
+          line-height: 53px; } }
   #team ul {
-    list-style: none;
-    columns: 2;
-    width: 580px; }
+    list-style: none; }
+    @media (min-width: 830px) {
+      #team ul {
+        columns: 2;
+        width: 580px; } }
+    @media (max-width: 829.5px) {
+      #team ul {
+        padding-left: 0; } }
     #team ul li {
       -webkit-column-break-inside: avoid;
       page-break-inside: avoid;
@@ -418,18 +556,32 @@ nav {
       margin: 0; }
   #team ul.spacey li {
     margin-bottom: 15px; }
+  @media (max-width: 1120px) {
+    #team h2 {
+      margin-top: 0; } }
 
 #staff {
   background: url(../assets/sketch-apple@2x.png) no-repeat;
-  background-position: 0vw 5vw;
+  background-position: -3vw bottom;
   background-size: 300px; }
   #staff ul {
     margin: 0 auto;
-    transform: translateX(10vw) translateY(-115px); }
+    transform: translateY(-115px); }
+    @media all and (max-width: 320px) {
+      #staff ul {
+        transform: translateY(-85px); } }
+  @media (min-width: 1120px) {
+    #staff {
+      background-position: 0vw 5vw; }
+      #staff ul {
+        transform: translateX(10vw); } }
 
 #directors h2 {
   margin-bottom: -45px;
   text-align: left; }
+  @media all and (max-width: 320px) {
+    #directors h2 {
+      margin-bottom: -35px; } }
 #directors ul {
   margin: 0;
   padding: 0; }
@@ -437,13 +589,21 @@ nav {
 #associate-board {
   background: url(../assets/sketch-ruler@2x.png) no-repeat;
   background-size: 200px; }
-  #associate-board h2, #associate-board ul {
-    transform: translateX(21.5vw); }
+  @media (min-width: 1120px) {
+    #associate-board h2, #associate-board ul {
+      transform: translateX(21.5vw); } }
+  @media (max-width: 1120px) {
+    #associate-board {
+      background-position: 3vw bottom; } }
   #associate-board h2 {
     text-align: left;
     margin-bottom: -45px; }
+    @media all and (max-width: 320px) {
+      #associate-board h2 {
+        margin-bottom: -35px; } }
   #associate-board ul {
-    margin: 0; }
+    margin: 0;
+    padding-bottom: 120px; }
   #associate-board .col-2 {
     transform: translateY(550px); }
 
@@ -451,6 +611,9 @@ nav {
   margin-bottom: -95px;
   padding: 30px;
   text-align: left; }
+  @media all and (max-width: 320px) {
+    #interns h2 {
+      margin-bottom: -85px; } }
 #interns .col-2 {
   transform: translateY(400px); }
 
@@ -460,9 +623,27 @@ nav {
   page-break-inside: avoid;
   break-inside: avoid;
   height: 25vw; }
+  @media all and (max-width: 1120px) {
+    .team-members__member {
+      margin-bottom: 103px; } }
+  @media all and (max-width: 830px) {
+    .team-members__member {
+      margin-bottom: 123px; } }
+  @media all and (max-width: 489px) {
+    .team-members__member {
+      margin-bottom: 173px; } }
   .team-members__member img {
     margin-bottom: 25px;
     width: 100%; }
+    @media all and (max-width: 1120px) {
+      .team-members__member img {
+        margin-bottom: 20px; } }
+    @media all and (max-width: 830px) {
+      .team-members__member img {
+        margin-bottom: 12px; } }
+    @media all and (max-width: 489px) {
+      .team-members__member img {
+        margin-bottom: 8px; } }
 
 #title__team {
   max-width: 401px;
@@ -472,7 +653,20 @@ nav {
   column-gap: 5vw;
   column-count: 3;
   margin: 0 18vw; }
+  @media all and (max-width: 489px) {
+    #team-members {
+      column-count: 2; } }
 
+@media (max-width: 1120px) {
+  .list-section {
+    text-align: left; }
+    .list-section li {
+      text-align: center; }
+    .list-section h2, .list-section ul {
+      transform: translateX(0); } }
+@media (max-width: 830px) {
+  #team .col-2 {
+    transform: none; } }
 #students {
   background-color: #b6c0f8; }
   #students h2 {
@@ -592,39 +786,83 @@ nav {
   height: 21vw;
   margin: 1vw; }
 
+.number-items-boxes--mobile {
+  margin: 0 auto;
+  max-width: 891px;
+  padding-top: 50px; }
+  @media (min-width: 980.5px) {
+    .number-items-boxes--mobile {
+      display: none; } }
+  .number-items-boxes--mobile .number-items-box {
+    height: 110px;
+    padding-right: 30px; }
+    @media (max-width: 489px) {
+      .number-items-boxes--mobile .number-items-box {
+        text-align: left;
+        padding-left: 14%; }
+        .number-items-boxes--mobile .number-items-box:first-child {
+          padding-left: 11%; } }
+    @media (min-width: 489px) {
+      .number-items-boxes--mobile .number-items-box {
+        display: inline-block; } }
+    .number-items-boxes--mobile .number-items-box:last-child {
+      padding-right: 0; }
+    .number-items-boxes--mobile .number-items-box div {
+      display: inline-block;
+      white-space: normal; }
+    .number-items-boxes--mobile .number-items-box .copy--20--futura {
+      margin-left: 14px; }
+
 .number-items-boxes {
   margin: 0 auto;
   max-width: 891px;
   text-align: left; }
-
-.number-items-box {
-  display: inline-block;
-  height: 110px;
-  margin-right: 100px;
-  text-align: left;
-  width: 210px;
-  white-space: nowrap; }
-  .number-items-box:last-child {
-    margin-right: 0; }
-  .number-items-box div {
+  @media (max-width: 980px) {
+    .number-items-boxes {
+      display: none; } }
+  .number-items-boxes .number-items-box {
     display: inline-block;
-    white-space: normal; }
-  .number-items-box .copy--20--futura {
-    margin-left: 14px; }
+    height: 110px;
+    margin-right: 100px;
+    text-align: left;
+    width: 210px;
+    white-space: nowrap; }
+    .number-items-boxes .number-items-box:last-child {
+      margin-right: 0; }
+    .number-items-boxes .number-items-box div {
+      display: inline-block;
+      white-space: normal; }
+    .number-items-boxes .number-items-box .copy--20--futura {
+      margin-left: 14px; }
 
 .programs__program .programs__program__body {
   margin: 0 auto;
-  max-width: 891px;
-  text-align: left; }
+  max-width: 891px; }
+  @media (min-width: 980.5px) {
+    .programs__program .programs__program__body {
+      text-align: left; } }
   .programs__program .programs__program__body img {
     display: inline-block;
     max-width: 412px;
     vertical-align: top; }
+    @media (max-width: 980px) {
+      .programs__program .programs__program__body img {
+        display: block;
+        margin: 0 auto;
+        padding: 0 11%;
+        width: calc(100% - 22%); } }
   .programs__program .programs__program__body .copy--16--bookmania {
     display: inline-block;
-    margin-left: 60px;
     margin-top: 0;
     max-width: 412px; }
+    @media (max-width: 980px) {
+      .programs__program .programs__program__body .copy--16--bookmania {
+        margin-top: 16px;
+        padding: 0 11%;
+        width: calc(100% - 22%); } }
+    @media (min-width: 980.5px) {
+      .programs__program .programs__program__body .copy--16--bookmania {
+        margin-left: 60px; } }
 .programs__program .programs__program__statistic {
   margin-bottom: 70px; }
 
@@ -659,18 +897,31 @@ nav {
 #partners {
   background-color: #fde88e; }
   #partners .list-section {
-    margin: 19vw; }
+    margin: 0 11%; }
     #partners .list-section h2 {
       font-weight: normal;
-      margin-top: 210px;
       text-align: left; }
+      @media (max-width: 320px) {
+        #partners .list-section h2 {
+          width: 268px;
+          font-size: 60px;
+          line-height: 53px; } }
   #partners #network ul {
     transform: translateX(-76px) translateY(-130px); }
+    @media all and (max-width: 320px) {
+      #partners #network ul {
+        transform: translateX(0px) translateY(-40px);
+        padding-left: 0;
+        min-width: 0; } }
   #partners #community-partners {
     background: url(../assets/sketch-scissors@2x.png) no-repeat;
     background-position: -1vw 1100px;
     background-size: 280px;
-    position: relative; }
+    position: relative;
+    margin-bottom: 300px; }
+    @media all and (max-width: 320px) {
+      #partners #community-partners {
+        background-position: bottom; } }
     #partners #community-partners h2 {
       transform: translateX(17vw); }
     #partners #community-partners ul:nth-child(2) {
@@ -679,24 +930,49 @@ nav {
       position: absolute;
       top: 35%;
       right: -150px; }
+    @media (max-width: 1150px) {
+      #partners #community-partners h2 {
+        transform: translateX(0); }
+      #partners #community-partners ul:nth-child(2) {
+        transform: translateX(0) translateY(-135px);
+        margin-bottom: 0; }
+      #partners #community-partners ul:nth-child(3) {
+        margin-top: 0;
+        position: static;
+        transform: translateY(-135px); } }
+    @media all and (max-width: 320px) {
+      #partners #community-partners ul, #partners #community-partners ul:nth-child(2), #partners #community-partners ul:nth-child(3) {
+        transform: translateX(0px) translateY(-70px);
+        padding-left: 0;
+        min-width: 0; } }
   #partners #school-partners {
     background: url(../assets/sketch-eraser.png) no-repeat;
     background-position: 38vw 3000px;
     background-size: 300px;
-    padding-bottom: 400px;
+    padding-bottom: 550px;
     position: relative; }
+    @media all and (max-width: 320px) {
+      #partners #school-partners {
+        background-position: bottom; } }
     #partners #school-partners h2 {
       margin-bottom: -80px; }
     #partners #school-partners ul:nth-child(3) {
       position: absolute;
-      top: 38%;
+      top: 31%;
       right: 0; }
     #partners #school-partners ul:nth-child(4) {
       position: relative;
       top: 400px; }
+    @media all and (max-width: 320px) {
+      #partners #school-partners ul, #partners #school-partners ul:nth-child(3), #partners #school-partners ul:nth-child(4) {
+        transform: translateX(0px) translateY(40px);
+        padding-left: 0;
+        margin: 0;
+        min-width: 0;
+        position: static; } }
   #partners ul {
     list-style: none;
-    width: 315px; }
+    min-width: 315px; }
     #partners ul p {
       margin: 0; }
 
