--- a/style/partials/_supporters.scss
+++ b/style/partials/_supporters.scss
@@ -32,12 +32,20 @@
 			margin-top: -400px;
 		}
 		ul:nth-of-type(2) {
+			@media all and (max-width: 1150px) {
+				transform: translateX(-50vw);
+			}
 			transform: translateX(-43vw);
 		}
 		ul:nth-of-type(3) {
-			transform: translateX(2vw);
+			@media all and (min-width: 1150px) {
+				transform: translateX(2vw);
+			}
 		}
 		ul:nth-of-type(4) {
+			@media all and (max-width: 1150px) {
+				transform: translateX(-43vw);
+			}
 			transform: translateX(-27vw);
 		}
 	}
@@ -85,6 +93,9 @@
 		background-position: 0 700px;
 		padding-left: 39vw;
 	}
+	#in-kind {
+		margin-bottom: 200px;
+	}
 }
 #volunteer-committees {
 	margin: 0 auto;
@@ -98,10 +109,12 @@
 	ul {
 		display: inline-block;
 		padding: 0 0 0 10px;
+		transform: none;
 	}
 }
 #img-supporters {
-	margin: 200px 0 107px;
+	display: block;
+	margin: 200px auto 107px;
 	max-width: 589px;
 }
 #title__supporters {
@@ -109,6 +122,59 @@
 	max-width: 410px;
 }
 #title__donors {
-	margin-bottom: 20px;
+	display: block;
+	margin: 0 auto 20px;
 	max-width: 385px;
+}
+
+#supporters {
+	@media all and (max-width: 829.5px) {
+		.list-section {
+			margin: 0;
+			width: auto;
+			h2 {
+				transform: translateX(200px);
+			}
+		}
+		ul {
+			transform: none;
+			margin-bottom: 0;
+			margin-left: auto;
+			margin-right: auto;
+			padding: 0;
+		}
+		ul:not(:nth-of-type(1)) {
+			margin-top: 0;
+		}
+		#fivehundred {margin-top: 0}
+		#gt-onehundred {
+			margin-top: 0;
+			padding-left: 0;
+			ul:not(:nth-of-type(1)) {
+				margin-top: 0;
+			}
+			ul:nth-of-type(2),
+			ul:nth-of-type(3),
+			ul:nth-of-type(4) {
+				transform: none;
+			}
+		}
+		#fivek,
+		#tenk,
+		#onek {
+			transform: none;
+		}
+		#lt-onehundred {
+			ul:nth-of-type(2),
+			ul:nth-of-type(3),
+			ul:nth-of-type(4),
+			ul:nth-of-type(5),
+			ul:nth-of-type(6),
+			ul:nth-of-type(7),
+			ul:nth-of-type(8) {
+				margin-top: 0px;
+				transform: none;
+			}
+		}
+	}
 }
