--- a/style/partials/_team.scss
+++ b/style/partials/_team.scss
@@ -122,8 +122,11 @@
 	@media all and (max-width: 830px) {
 		margin-bottom: 123px;
 	}
-	@media all and (max-width: 489px) {
+	@media all and (max-width: 659px) {
 		margin-bottom: 173px;
+	}
+	@media all and (max-width: 489px) {
+		margin-bottom: 82vw;
 	}
 	-webkit-column-break-inside: avoid;
 	page-break-inside: avoid;
@@ -137,8 +140,9 @@
 		@media all and (max-width: 830px) {
 			margin-bottom: 12px;
 		}
-		@media all and (max-width: 489px) {
+		@media all and (max-width: 659px) {
 			margin-bottom: 8px;
+			height: auto;
 		}
 		width: 100%;
 	}
@@ -151,8 +155,11 @@
 	column-gap: 5vw;
 	column-count: 3;
 	margin: 0 18vw;
-	@media all and ( max-width: 489px ) {
+	@media all and ( max-width: 659px ) {
 		column-count: 2;
+	}
+	@media all and ( max-width: 489px ) {
+		column-count: 1;
 	}
 }
 
